<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_view_idea"
    tools:context=".views.viewidea.ViewIdeaFragment">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_title_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_idea_about"
            android:layout_marginStart="20dp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_title_container"
            android:layout_below="@id/tv_title_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_title"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_idea_title"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_elevatorPitch_container"
                android:layout_below="@id/et_title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_elevatorPitch"
                    android:inputType="textMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_idea_elevator_pitch"/>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/snorlax"
            android:layout_below="@id/et_elevatorPitch_container"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:layout_below="@id/et_elevatorPitch_container"
            android:id="@+id/tv_title_func_container">
            <TextView
                android:id="@+id/tv_title_func"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/create_idea_title_func"
                android:layout_marginStart="20dp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_functionality"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/create_idea_add_func"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/tv_title_func_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:id="@+id/recyclerView"/>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>